--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,12 @@ jobs:
     concurrency: release
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out source repository
+      uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    - name: Python Semantic Release
-      uses: relekang/python-semantic-release@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        #repository_username: __token__
-        #repository_password: ${{ secrets.PYPI_TOKEN }}
+    - name: Bump up the version
+      run: |
+        python3 -m pip install python-semantic-release
+        semantic-release publish
