--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,13 @@ jobs:
     concurrency: release
 
     steps:
-    - name: Check out source repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    - name: Bump up the version
-      run: |
-        python3 -m pip install python-semantic-release
-        semantic-release publish
+    - name: Python Semantic Release
+      uses: relekang/python-semantic-release@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        #repository_username: __token__
+        #repository_password: ${{ secrets.PYPI_TOKEN }}
