removed test runner

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,28 +32,28 @@ jobs:
           ignore: "E203,E402,E265,F841,F541,E702,F401,E501,W503"
           max-line-length: 120
 
-  build_test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: The current branch
-        run: |
-          echo "using GITHUB_ref_name : $GITHUB_REF_NAME"
-          echo "using GITHUB_BASE_REF : $GITHUB_BASE_REF"
-          echo "using GITHUB_HEAD_REF : $GITHUB_HEAD_REF"
+  # build_test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: The current branch
+  #       run: |
+  #         echo "using GITHUB_ref_name : $GITHUB_REF_NAME"
+  #         echo "using GITHUB_BASE_REF : $GITHUB_BASE_REF"
+  #         echo "using GITHUB_HEAD_REF : $GITHUB_HEAD_REF"
 
-      - uses: actions/checkout@v2
-      - name: Build Docker for sail Test
-        env:
-          PAT: ${{ secrets.JENKINS_BUILD_TOKEN }}
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        run: |
-          set -e
-          pwd
-          ls -l 
-          sudo chmod 666 /var/run/docker.sock
-          docker build --build-arg git_personal_token=$PAT --build-arg branch=$BRANCH_NAME -t sail/sail-data-layer-test -f docker/dockerfile_test .
-          docker run sail/sail-data-layer-test
-  
+  #     - uses: actions/checkout@v2
+  #     - name: Build Docker for sail Test
+  #       env:
+  #         PAT: ${{ secrets.JENKINS_BUILD_TOKEN }}
+  #         BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+  #       run: |
+  #         set -e
+  #         pwd
+  #         ls -l 
+  #         sudo chmod 666 /var/run/docker.sock
+  #         docker build --build-arg git_personal_token=$PAT --build-arg branch=$BRANCH_NAME -t sail/sail-data-layer-test -f docker/dockerfile_test .
+  #         docker run sail/sail-data-layer-test
+
   workflow-conclusion:
     # Without this step workflow remains "green" if build does fail.
     if: always()
